# fgk

./: .gitignore  CMakeLists.txt  README.md
lib/: Fighter.h  Platform.h
src/: Fighter.cpp  Platform.cpp  main.cpp
